// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component matches snapshot with custom props 1`] = `
<MoviesList
  actionsList={[Function]}
  currentPage={1}
  emptyListTxt="Mock empty list text"
  error=""
  list={
    Array [
      Object {
        "id": 1,
        "overview": "Decades after Sarah Connor prevented Judgment Day.",
        "poster_path": "/vqzNJRH4YyquRiWxCCOH0aXggHI.jpg",
        "title": "Terminator: Dark Fate",
      },
    ]
  }
  loading={true}
  onPaginationClick={[MockFunction]}
  totalItems={21}
/>
`;

exports[`List component matches snapshot with required props 1`] = `
<MoviesList
  actionsList={[Function]}
  currentPage={1}
  emptyListTxt="Mock empty list text"
  error=""
  list={null}
  loading={true}
  onPaginationClick={[MockFunction]}
  totalItems={21}
/>
`;

exports[`List component passes actions array to <MoviesList /> 1`] = `
<WrappedComponentShell
  id={1}
  key="delete"
  removeModalAction={[MockFunction]}
  removeModalTxt="Mock modal text"
  title="Mock title"
/>
`;
